# DeepPDE-RL

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
deeppde_rl/: protocol.py
deeppde_rl/single_controller/base/: __init__.py  decorator.py  worker.py
deeppde_rl/single_controller/ray/: __init__.py  base.py
deeppde_rl/trainer/: main_ppo.py
deeppde_rl/trainer/config/: ppo.yaml
deeppde_rl/trainer/ppo/: trainer.py
deeppde_rl/trainer/utils/: pinn_loss.py
deeppde_rl/trainer/workers/: fsdp_workers.py
deeppde_rl/utils/: py_functional.py  torch_functional.py
notebooks/: import_test.ipynb
